--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbzRywKhoUMvr4Ftekk5NJ",
+      "authorship_tag": "ABX9TyMbMR/vCAi9WPN0TABlkKmu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,36 +58,46 @@
     {
       "cell_type": "code",
       "source": [
-        "p1 = input(\"Rock, Paper, Scissors? \")\n",
-        "p2 = input(\"Rock, Paper, Scissors? \")\n",
+        "import random\n",
+        "choice = input(\"Do you want to play a game? Enter Yes or No \")\n",
         "\n",
-        "if p1 == p2:\n",
-        "  print(\"Draw\")\n",
-        "elif p1 == \"Rock\" and p2 == \"Scissors\":\n",
-        "  print(\"Player 1 wins!\")\n",
-        "elif p1 == \"Paper\" and p2 == \"Rock\":\n",
-        "  print(\"Player 1 wins!\")\n",
-        "elif p1 == \"Scissors\" and p2 == \"Paper\":\n",
-        "  print(\"Player 1 wins!\")\n",
-        "else:\n",
-        "  print(\"Player 2 wins!\")"
+        "while choice == \"Yes\":\n",
+        "  p1 = input(\"Rock, Paper, Scissors? \")\n",
+        "  p2 = random.choice(['Rock', 'Paper', 'Scissors'])\n",
+        "  print(f'Computer.chose {p2}.')\n",
+        "\n",
+        "  if p1 == p2:\n",
+        "    print(\"Draw\")\n",
+        "  elif p1 == \"Rock\" and p2 == \"Scissors\":\n",
+        "    print(\"User wins!\")\n",
+        "  elif p1 == \"Paper\" and p2 == \"Rock\":\n",
+        "    print(\"User wins!\")\n",
+        "  elif p1 == \"Scissors\" and p2 == \"Paper\":\n",
+        "    print(\"User wins!\")\n",
+        "  else:\n",
+        "    print(\"Computer wins!\")\n",
+        "  choice = input(\"Do you want to play again? \")\n",
+        "  print('Ok bye!')\n"
       ],
       "metadata": {
         "id": "kvs7SRFhEacz",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "1fa66629-4379-4a7f-f3d4-e8175d4272c4"
+        "outputId": "257a4841-65c4-487f-f8b4-ae9db8e793cd"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Rock, Paper, Scissors? Scissors\n",
+            "Do you want to play a game? Enter Yes or No Yes\n",
             "Rock, Paper, Scissors? Rock\n",
-            "Player 2 wins!\n"
+            "Computer.chose Paper.\n",
+            "Computer wins!\n",
+            "Do you want to play again? Rock\n",
+            "Ok bye!\n"
           ]
         }
       ]
@@ -107,14 +117,29 @@
         "  print(n1*n2)\n",
         "elif symbol == '/':\n",
         "  print(n1/n2)\n",
-        "else:\n",
+        "else:2\n",
         "  print(n1**n2)"
       ],
       "metadata": {
-        "id": "hQUHCOQuXaZj"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hQUHCOQuXaZj",
+        "outputId": "6b4114de-f9d7-4942-b42f-b0dadd29095e"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 1\n",
+            "Enter a second number: 1\n",
+            "Choose operator (+, -, *, /, **): 2\n",
+            "1.0\n"
+          ]
+        }
+      ]
     }
   ]
 }
