--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMbMR/vCAi9WPN0TABlkKmu",
+      "authorship_tag": "ABX9TyNBDHairxEODfla7n+Jr0cl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -86,7 +86,7 @@
         },
         "outputId": "257a4841-65c4-487f-f8b4-ae9db8e793cd"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,6 +137,79 @@
             "Enter a second number: 1\n",
             "Choose operator (+, -, *, /, **): 2\n",
             "1.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "fRate = 5\n",
+        "hRate = 2.5\n",
+        "\n",
+        "for hrs in range(1, 9, 1): #Despite it being 8 hrs in parking you need to go above the number\n",
+        "  charge = fRate + hRate*hrs\n",
+        "  if charge<10:\n",
+        "    charge=10.0\n",
+        "  if charge>20:\n",
+        "    charge=20.0\n",
+        "  print(hrs, charge)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QIRNJ7oGZ6DB",
+        "outputId": "10782d28-5557-48d3-a317-a843f4ecf206"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 10.0\n",
+            "2 10.0\n",
+            "3 12.5\n",
+            "4 15.0\n",
+            "5 17.5\n",
+            "6 20.0\n",
+            "7 20.0\n",
+            "8 20.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for ad in range(0,201,25):\n",
+        "  additional = 2*round(ad**.5,1)\n",
+        "  profit = (20+additional)*10-200-ad\n",
+        "  print(ad, profit)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5vf1Z81Rkvdx",
+        "outputId": "d8680c93-2f7c-473f-ba59-ffe33babcfca"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0 0.0\n",
+            "25 75.0\n",
+            "50 92.0\n",
+            "75 99.0\n",
+            "100 100.0\n",
+            "125 99.0\n",
+            "150 94.0\n",
+            "175 89.0\n",
+            "200 82.0\n"
           ]
         }
       ]
