--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNBDHairxEODfla7n+Jr0cl",
+      "authorship_tag": "ABX9TyNj0cZqXF6ytiZ9fMxr1N5v",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -162,7 +162,7 @@
         "id": "QIRNJ7oGZ6DB",
         "outputId": "10782d28-5557-48d3-a317-a843f4ecf206"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +195,7 @@
         "id": "5vf1Z81Rkvdx",
         "outputId": "d8680c93-2f7c-473f-ba59-ffe33babcfca"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,6 +210,42 @@
             "150 94.0\n",
             "175 89.0\n",
             "200 82.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "L = []\n",
+        "\n",
+        "item = int(input('Give a value: '))\n",
+        "\n",
+        "while item != 0:\n",
+        "  L.append(item)\n",
+        "  print(L)\n",
+        "  item = int(input('Give another value: '))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7faHmjZwmSPT",
+        "outputId": "459a056b-3ad9-4e78-9382-efa4c02047cb"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Give a value: 1\n",
+            "[1]\n",
+            "Give another value: 5\n",
+            "[1, 5]\n",
+            "Give another value: 3\n",
+            "[1, 5, 3]\n",
+            "Give another value: 0\n"
           ]
         }
       ]
