--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNj0cZqXF6ytiZ9fMxr1N5v",
+      "authorship_tag": "ABX9TyMhT9hOr+iC3WdGx1rg2D+I",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -233,7 +233,7 @@
         "id": "7faHmjZwmSPT",
         "outputId": "459a056b-3ad9-4e78-9382-efa4c02047cb"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "name": "stdout",
@@ -246,6 +246,143 @@
             "Give another value: 3\n",
             "[1, 5, 3]\n",
             "Give another value: 0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "months = {}\n",
+        "\n",
+        "names = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+        "numbers = [1,2,3,4,5,6,7,8,9,10,11,12]\n",
+        "\n",
+        "for i in range(len(numbers)):\n",
+        "  months[numbers[i]] = names[i]\n",
+        "months"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "gAcghJojWHWS",
+        "outputId": "facc218d-509f-49d3-be0e-74773cb133c4"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 'Jan',\n",
+              " 2: 'Feb',\n",
+              " 3: 'Mar',\n",
+              " 4: 'Apr',\n",
+              " 5: 'May',\n",
+              " 6: 'Jun',\n",
+              " 7: 'Jul',\n",
+              " 8: 'Aug',\n",
+              " 9: 'Sep',\n",
+              " 10: 'Oct',\n",
+              " 11: 'Nov',\n",
+              " 12: 'Dec'}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 7
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "months[3]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "ifFYTfARbdyf",
+        "outputId": "7c6b5c0f-ce65-42cb-f443-90a1be5d904b"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'Mar'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 11
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours):\n",
+        "  fee = 5+ hours * 2.5\n",
+        "  return fee\n",
+        "\n",
+        "hours_parked = int(input('Enter hours for parking: '))\n",
+        "f = calcFee(hours_parked)\n",
+        "print(f)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "6_V177AmhIqs",
+        "outputId": "ed02c5e2-4362-4565-e201-00fe73f66575"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter hours for parking: 4\n",
+            "15.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def calcFee(hours):\n",
+        "    fee = 5 + hours * 2.5\n",
+        "    return round(fee, 2)\n",
+        "\n",
+        "def displayFee(fee):\n",
+        "    print(fee)\n",
+        "\n",
+        "hours_parked = int(input('Enter hours for parking: '))\n",
+        "f = calcFee(hours_parked)\n",
+        "displayFee(f)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1LkUUantlic-",
+        "outputId": "774cf12e-c2f2-4595-807d-63a6b439b9cc"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter hours for parking: 4\n",
+            "15.0\n"
           ]
         }
       ]
