--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMhT9hOr+iC3WdGx1rg2D+I",
+      "authorship_tag": "ABX9TyPKEBdzjeLfIAr1S2uYBDoj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -327,6 +327,155 @@
     {
       "cell_type": "code",
       "source": [
+        "annual_salary = float(input(\"Enter your annual salary: \"))\n",
+        "portion_saved = float(input('Enter what percent of your salary is saved (Enter in a decimal): '))\n",
+        "total_cost = float(input(\"Enter the cost of the dream home\"))\n",
+        "\n",
+        "current_saving = 0.0\n",
+        "monthly_salary = annual_salary/12\n",
+        "down_payment = total_cost*.25\n",
+        "months = 0\n",
+        "\n",
+        "while current_saving < down_payment:\n",
+        "  current_saving += current_saving*(.04/12)\n",
+        "  current_saving += monthly_salary*portion_saved\n",
+        "  months += 1\n",
+        "\n",
+        "print(f'Number of months: {months}')\n",
+        "\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oJ_eH7HYxX2t",
+        "outputId": "31f9a9ce-f0b0-4723-b6e0-0d7c7d495e3d"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your annual salary: 12.1\n",
+            "Enter what percent of your salary is saved (Enter in a decimal): 255.2\n",
+            "Enter the cost of the dream home245923.5\n",
+            "Number of months: 177\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "annual_salary = float(input(\"Enter your annual salary: \"))\n",
+        "portion_saved = float(input('Enter what percent of your salary is saved (Enter in a decimal): '))\n",
+        "total_cost = float(input(\"Enter the cost of the dream home: \"))\n",
+        "semi_annual_raise = float(input(\"Enter the semi-annual raise, as a decimal: \"))\n",
+        "\n",
+        "current_saving = 0.0\n",
+        "monthly_salary = annual_salary/12\n",
+        "down_payment = total_cost*.25\n",
+        "months = 0\n",
+        "\n",
+        "while current_saving < down_payment:\n",
+        "  current_saving += current_saving*(.04/12)\n",
+        "  current_saving += monthly_salary*portion_saved\n",
+        "  months += 1\n",
+        "  if months % 6 == 0:\n",
+        "    annual_salary += annual_salary * semi_annual_raise  # Increase salary\n",
+        "    monthly_salary = annual_salary / 12\n",
+        "\n",
+        "print(f'Number of months: {months}')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OZCw9WJv1y0y",
+        "outputId": "85d0b38b-2ba4-41b5-973c-40e043ab6233"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter your annual salary: 120000\n",
+            "Enter what percent of your salary is saved (Enter in a decimal): .05\n",
+            "Enter the cost of the dream home: 500000\n",
+            "Enter the semi-annual raise, as a decimal: .03\n",
+            "Number of months: 142\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "annual_salary = float(input(\"Enter your annual salary: \"))\n",
+        "portion_saved = float(input('Enter what percent of your salary is saved (Enter in a decimal): '))\n",
+        "total_cost = float(input(\"Enter the cost of the dream home: \"))\n",
+        "semi_annual_raise = float(input(\"Enter the semi-annual raise, as a decimal: \"))\n",
+        "\n",
+        "current_saving = 0.0\n",
+        "monthly_salary = annual_salary/12\n",
+        "down_payment = total_cost*.25\n",
+        "months = 0\n",
+        "\n",
+        "while current_saving < down_payment:\n",
+        "  current_saving += current_saving*(.04/12)\n",
+        "  current_saving += monthly_salary*portion_saved\n",
+        "  months += 1\n",
+        "  if months % 6 == 0:\n",
+        "    annual_salary += annual_salary * semi_annual_raise  # Increase salary\n",
+        "    monthly_salary = annual_salary / 12\n",
+        "\n",
+        "print(f'Number of months: {months}')"
+      ],
+      "metadata": {
+        "id": "ZLr55x9g7wPw"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = int(input(\"Enter a number: \"))\n",
+        "low_end = 10\n",
+        "high_end = 50\n",
+        "\n",
+        "def range_check(num, low, high):\n",
+        "  if low <= num <= high:\n",
+        "    print(f\"{num} is within the range.\")\n",
+        "  else:\n",
+        "    print(f\"{num} is not within the range\")\n",
+        "\n",
+        "range_check(number, low_end, high_end)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "bvA3P99u_utC",
+        "outputId": "bd02c730-f38b-45f3-a8ab-7350ec3fd2d5"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number: 75\n",
+            "75 is not within the range\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "def calcFee(hours):\n",
         "  fee = 5+ hours * 2.5\n",
         "  return fee\n",
@@ -342,7 +491,7 @@
         "id": "6_V177AmhIqs",
         "outputId": "ed02c5e2-4362-4565-e201-00fe73f66575"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,13 +518,13 @@
         "displayFee(f)\n"
       ],
       "metadata": {
+        "id": "1LkUUantlic-",
+        "outputId": "774cf12e-c2f2-4595-807d-63a6b439b9cc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "1LkUUantlic-",
-        "outputId": "774cf12e-c2f2-4595-807d-63a6b439b9cc"
+        }
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
