--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPKEBdzjeLfIAr1S2uYBDoj",
+      "authorship_tag": "ABX9TyOcQ1U8xGvZKDvp4KpTzl5u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -351,7 +351,7 @@
         "id": "oJ_eH7HYxX2t",
         "outputId": "31f9a9ce-f0b0-4723-b6e0-0d7c7d495e3d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -383,7 +383,7 @@
         "  current_saving += monthly_salary*portion_saved\n",
         "  months += 1\n",
         "  if months % 6 == 0:\n",
-        "    annual_salary += annual_salary * semi_annual_raise  # Increase salary\n",
+        "    annual_salary += annual_salary * semi_annual_raise\n",
         "    monthly_salary = annual_salary / 12\n",
         "\n",
         "print(f'Number of months: {months}')"
@@ -395,7 +395,7 @@
         "id": "OZCw9WJv1y0y",
         "outputId": "85d0b38b-2ba4-41b5-973c-40e043ab6233"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +461,7 @@
         "id": "bvA3P99u_utC",
         "outputId": "bd02c730-f38b-45f3-a8ab-7350ec3fd2d5"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -532,6 +532,38 @@
           "text": [
             "Enter hours for parking: 4\n",
             "15.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def rev(h):\n",
+        "  if len(h) == 1:\n",
+        "    return h\n",
+        "  else:\n",
+        "    return h[-1]+rev(h[1:-1])+h[0]\n",
+        "\n",
+        "h = input('Enter a Word: ')\n",
+        "reverse = rev(h)\n",
+        "print(reverse)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L7UT-yEqkpXk",
+        "outputId": "659bca7a-ed12-409c-841e-057283d05647"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a Word: pnnje3opjwqldndwq\n",
+            "qwdndlqwjpo3ejnnp\n"
           ]
         }
       ]
