--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOcQ1U8xGvZKDvp4KpTzl5u",
+      "authorship_tag": "ABX9TyP4x8qu4io7XzJN5zaveNf3",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -556,7 +556,7 @@
         "id": "L7UT-yEqkpXk",
         "outputId": "659bca7a-ed12-409c-841e-057283d05647"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,6 +565,49 @@
             "Enter a Word: pnnje3opjwqldndwq\n",
             "qwdndlqwjpo3ejnnp\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def wAvg(L, w):\n",
+        "  res = []\n",
+        "  try:\n",
+        "    for i in range(len(L)):\n",
+        "      res.append(L[i] * w[i])\n",
+        "    return sum(res) / sum(w)\n",
+        "  except ZeroDivisionError:\n",
+        "    print('Division by zero.')\n",
+        "    return []\n",
+        "  except TypeError:\n",
+        "    print('Non-numerical objects found.')\n",
+        "    return []\n",
+        "  except Exception as e:\n",
+        "    print(f'Unknown error: {e}')\n",
+        "    return float('nan')\n",
+        "\n",
+        "\n",
+        "wAvg([1,2,3], [.1,.3,.4])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9rpLO-aDBhE_",
+        "outputId": "960277e4-b18a-4b62-ced3-1efe1181f2c6"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2.375"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 2
         }
       ]
     }
