--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP4x8qu4io7XzJN5zaveNf3",
+      "authorship_tag": "ABX9TyPj4Tn1EFdMQTb7+09iBBBE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -597,7 +597,7 @@
         "id": "9rpLO-aDBhE_",
         "outputId": "960277e4-b18a-4b62-ced3-1efe1181f2c6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -608,6 +608,60 @@
           },
           "metadata": {},
           "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, number):\n",
+        "    self.name = name\n",
+        "    self.number = number\n",
+        "\n",
+        "  def __str__(self):\n",
+        "    return f'Name: {self.name}; Number: {self.number}'"
+      ],
+      "metadata": {
+        "id": "nyE9d5tH282B"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s1 = Student('James Bond', '007')\n",
+        "s2 = Student('Clark Kent', '333')"
+      ],
+      "metadata": {
+        "id": "2ZIKC5Eb5jo9"
+      },
+      "execution_count": 23,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(s1)\n",
+        "print(s2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xMjHE_TK7Tr3",
+        "outputId": "e42c2b68-4ace-4532-af83-bfe5fb8d4937"
+      },
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Name: James Bond; Number: 007\n",
+            "Name: Clark Kent; Number: 333\n"
+          ]
         }
       ]
     }
