--- a/In_Class_Assignment.ipynb
+++ b/In_Class_Assignment.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPj4Tn1EFdMQTb7+09iBBBE",
+      "authorship_tag": "ABX9TyO9Y5WiuzwYvzgnKlYRlwI2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -327,121 +327,6 @@
     {
       "cell_type": "code",
       "source": [
-        "annual_salary = float(input(\"Enter your annual salary: \"))\n",
-        "portion_saved = float(input('Enter what percent of your salary is saved (Enter in a decimal): '))\n",
-        "total_cost = float(input(\"Enter the cost of the dream home\"))\n",
-        "\n",
-        "current_saving = 0.0\n",
-        "monthly_salary = annual_salary/12\n",
-        "down_payment = total_cost*.25\n",
-        "months = 0\n",
-        "\n",
-        "while current_saving < down_payment:\n",
-        "  current_saving += current_saving*(.04/12)\n",
-        "  current_saving += monthly_salary*portion_saved\n",
-        "  months += 1\n",
-        "\n",
-        "print(f'Number of months: {months}')\n",
-        "\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "oJ_eH7HYxX2t",
-        "outputId": "31f9a9ce-f0b0-4723-b6e0-0d7c7d495e3d"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter your annual salary: 12.1\n",
-            "Enter what percent of your salary is saved (Enter in a decimal): 255.2\n",
-            "Enter the cost of the dream home245923.5\n",
-            "Number of months: 177\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "annual_salary = float(input(\"Enter your annual salary: \"))\n",
-        "portion_saved = float(input('Enter what percent of your salary is saved (Enter in a decimal): '))\n",
-        "total_cost = float(input(\"Enter the cost of the dream home: \"))\n",
-        "semi_annual_raise = float(input(\"Enter the semi-annual raise, as a decimal: \"))\n",
-        "\n",
-        "current_saving = 0.0\n",
-        "monthly_salary = annual_salary/12\n",
-        "down_payment = total_cost*.25\n",
-        "months = 0\n",
-        "\n",
-        "while current_saving < down_payment:\n",
-        "  current_saving += current_saving*(.04/12)\n",
-        "  current_saving += monthly_salary*portion_saved\n",
-        "  months += 1\n",
-        "  if months % 6 == 0:\n",
-        "    annual_salary += annual_salary * semi_annual_raise\n",
-        "    monthly_salary = annual_salary / 12\n",
-        "\n",
-        "print(f'Number of months: {months}')"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "OZCw9WJv1y0y",
-        "outputId": "85d0b38b-2ba4-41b5-973c-40e043ab6233"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Enter your annual salary: 120000\n",
-            "Enter what percent of your salary is saved (Enter in a decimal): .05\n",
-            "Enter the cost of the dream home: 500000\n",
-            "Enter the semi-annual raise, as a decimal: .03\n",
-            "Number of months: 142\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "annual_salary = float(input(\"Enter your annual salary: \"))\n",
-        "portion_saved = float(input('Enter what percent of your salary is saved (Enter in a decimal): '))\n",
-        "total_cost = float(input(\"Enter the cost of the dream home: \"))\n",
-        "semi_annual_raise = float(input(\"Enter the semi-annual raise, as a decimal: \"))\n",
-        "\n",
-        "current_saving = 0.0\n",
-        "monthly_salary = annual_salary/12\n",
-        "down_payment = total_cost*.25\n",
-        "months = 0\n",
-        "\n",
-        "while current_saving < down_payment:\n",
-        "  current_saving += current_saving*(.04/12)\n",
-        "  current_saving += monthly_salary*portion_saved\n",
-        "  months += 1\n",
-        "  if months % 6 == 0:\n",
-        "    annual_salary += annual_salary * semi_annual_raise  # Increase salary\n",
-        "    monthly_salary = annual_salary / 12\n",
-        "\n",
-        "print(f'Number of months: {months}')"
-      ],
-      "metadata": {
-        "id": "ZLr55x9g7wPw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "number = int(input(\"Enter a number: \"))\n",
         "low_end = 10\n",
         "high_end = 50\n",
@@ -619,13 +504,19 @@
         "    self.name = name\n",
         "    self.number = number\n",
         "\n",
+        "  def set_name(self, newname):\n",
+        "    self.name = newname\n",
+        "\n",
+        "  def get_name(self):\n",
+        "    return self.name\n",
+        "\n",
         "  def __str__(self):\n",
-        "    return f'Name: {self.name}; Number: {self.number}'"
+        "    return f'Name: {self.name}; Number: {self.number};'"
       ],
       "metadata": {
         "id": "nyE9d5tH282B"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -637,31 +528,103 @@
       "metadata": {
         "id": "2ZIKC5Eb5jo9"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "print(s1)\n",
-        "print(s2)"
+        "print(s1)"
       ],
       "metadata": {
+        "id": "xMjHE_TK7Tr3",
+        "outputId": "228fdf6c-861d-4595-b74e-f2d1196b3a0d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "xMjHE_TK7Tr3",
-        "outputId": "e42c2b68-4ace-4532-af83-bfe5fb8d4937"
+        }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Name: James Bond; Number: 007\n",
-            "Name: Clark Kent; Number: 333\n"
+            "Name: James Bond; Number: 007;\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class Student:\n",
+        "  def __init__(self, name, number):\n",
+        "    self.name = name\n",
+        "    self.number = number\n",
+        "    self.courses = []\n",
+        "\n",
+        "  def enroll(self, course):\n",
+        "    if course not in self.courses:\n",
+        "      self.courses.append(course)\n",
+        "    else:\n",
+        "      print('Already enrolled.: {course}')\n",
+        "\n",
+        "  def get_courses(self):\n",
+        "    return self.courses"
+      ],
+      "metadata": {
+        "id": "G9mdVWnDOGEi"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = Student('Bob', '123')"
+      ],
+      "metadata": {
+        "id": "HvuChpCCPP-V"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.enroll('BTE 320')\n",
+        "s.enroll('BTE 720')\n",
+        "s.enroll('BTE 430')"
+      ],
+      "metadata": {
+        "id": "NQ-CuSXPPXNT"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s.get_courses()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o2lZTwSvPhVo",
+        "outputId": "d962ec00-7f43-4bb6-a131-03f48cb01b08"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "['BTE 320', 'BTE 720', 'BTE 430']"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
         }
       ]
     }
